--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -2,47 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.6/index.global.min.js'></script>
+    
     
     {% block header %}
     {% endblock %}
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tracker App</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li>
-                <a href="/">Home</a>
-            </li>
-            
-            
-            {% if user.is_authenticated %}
-            <!--<li>
-                <a href="/tasks">Tasks Pending</a>
-            </li>
-            <li>
-                <a href="/tasks_completed">Tasks Completed</a>
-            </li>-->
-            <li>
-                <a href="/calendar/">Calendar</a>
-            </li>
-            <li>
-                <a href="/my_job/">My Job</a>
-            </li>
-            <li>
-                <a href="/logout">Logout</a>
-            </li>
-            {% else %}
-            <li>
-                <a href="/signup">Signup</a>
-            </li>
-            <li>
-                <a href="/signin">Signin</a>
-            </li>
-            {% endif %}
-        </ul>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <div class="container">
+          <a class="navbar-brand" href="/">Time tracker</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    
+                    
+                    {% if user.is_authenticated %}
+                    <!--<li>
+                        <a href="/tasks">Tasks Pending</a>
+                    </li>
+                    <li>
+                        <a href="/tasks_completed">Tasks Completed</a>
+                    </li>-->
+                    <li class="nav-item">
+                        <a class="nav-link" href="/calendar/">Calendar</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/my_job/">My Job</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Logout</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/signup">Signup</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/signin">Signin</a>
+                    </li>
+                {% endif %}
+                </ul>
+            </div>
+        </div>
     </nav>
     {% block content %}
     {% endblock %}
