--- a/tasks/templates/calendar.html
+++ b/tasks/templates/calendar.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
+<script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.6/index.global.min.js'></script>
 <script>
     function renderLinks(){
       var num = document.getElementsByClassName("fc-daygrid-day-number");
