--- a/tasks/templates/signup.html
+++ b/tasks/templates/signup.html
@@ -1,15 +1,34 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Signup</h1>
-{{error}}
-<!--para enviar el formulario creado por django debemos definirlo como formulario de html-->
 
-<form action="/signup/" method="POST"><!--Cuando se presione el boton se enviara la informacion a una ruta /signup/ misma que debe agragarse en urls del proyecto principal-->
-    {% csrf_token %}
-    {{form.as_p}} <!--as_p pone cad uno de los elementos de form en una etiqueta p-->
-    <button>
-        Signup
-    </button>
+<main class="container">
+    <!--para enviar el formulario creado por django debemos definirlo como formulario de html-->
+    <div class="row">
+        <div class="col-md-4 offset-md-4">
+            <form method="POST" class="card card-body"><!--Cuando se presione el boton se enviara la informacion a una ruta /signup/ misma que debe agragarse en urls del proyecto principal-->
+                <h1 class="text-center">Signup</h1>
+                {{error}}
+                {% csrf_token %}
+                <div>
+                    <label for="username">Username:</label>
+                    <input type="text" name="username" id="username" class="form-control" placeholder="Write username">
+                </div>
 
-</form>
+                <div>
+                    <label for="password1">Password:</label>
+                    <input type="password" name="password1" id="password1" class="form-control" placeholder="Write password">
+                </div>
+
+                <div>
+                    <label for="password2">Confirm your Password:</label>
+                    <input type="password" name="password2" id="password2" class="form-control" placeholder="Confirm password">
+                </div>
+
+                <button class="btn btn-primary">
+                    Signup
+                </button>
+            </form>
+        </div>
+    </div>
+</main>
 {% endblock %}
