--- a/tasks/templates/tasks_by_day.html
+++ b/tasks/templates/tasks_by_day.html
@@ -1,25 +1,32 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Today is {{month}}/{{day}}/{{year}}</h1>
-<ul>
-    {% for task in tasks %}
-    <li>
-        <a href="{% url 'task_detail' month day year task.id %}"> <!--nos manda a la url con name=task_detail y pasa task.id como parametro-->
-            
-            <strong>{{task.title}}</strong>
-
-            <p>{{task.description}}</p>
-            <p>Starting: {{task.init_time}}</p>
-            <p>Ending: {{task.finish_time}}</p>
-            <p>Duration: {{task.durationH}}:{{task.durationm}}</p>
-        </a>
-    </li>
-    {% endfor %}
-    <li>
-        
-        <a href="{% url 'create_task' month day year %}">Create task</a>
-        
-    </li>
-</ul>
+<main class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <h1 class="text-center display-3 " >{{month}}/{{day}}/{{year}}</h1>
+            <ul class="list-group">
+                {% for task in tasks %}
+                <a class="list-group-item" href="{% url 'task_detail' month day year task.id %}">
+                     <!--nos manda a la url con name=task_detail y pasa task.id como parametro-->
+                        
+                    <header class="d-flex justify-content-between">
+                        <strong class="fw-bold">{{task.title}}</strong>                
+                        <p>Starting: {{task.init_time}}</p>
+                        <p>Ending: {{task.finish_time}}</p>
+                        
+                    </header>
+                    <p>Duration: {{task.durationH}}:{{task.durationm}}</p>  
+                    <p>{{task.description}}</p>
+                </a>
+                {% endfor %}
+                <li>
+                    
+                    <a href="{% url 'create_task' month day year %}" class="btn btn-primary">Create task</a>
+                    
+                </li>
+            </ul>
+        </div>
+    </div>
+</main>
 {% endblock %}
