--- a/tasks/templates/signup.html
+++ b/tasks/templates/signup.html
@@ -15,6 +15,19 @@
                 </div>
 
                 <div>
+                    <label for="company">Company:</label>
+                    <input type="text" name="company" id="company" class="form-control" placeholder="Write company" required>
+                </div>
+
+                <div>
+                    <label for="role">Role:</label>
+                    <select name="role" id="role" class="form-control">
+                        <option value="boss">boss</option>
+                        <option value="worker">worker</option>
+                      </select>
+                </div>
+
+                <div>
                     <label for="password1">Password:</label>
                     <input type="password" name="password1" id="password1" class="form-control" placeholder="Write password">
                 </div>
